--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
         "moduleResolution":       "Node",
-        "module":                 "commonjs",
-        "target":                 "es2015",
+        "module":                 "es6",
+        "target":                 "es6",
         "sourceMap":              true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata":  true,
