--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "@ricksteam/fluent-behavior-tree-browser",
     "version": "0.2.0",
     "description": "Behavior tree library with a fluent API, compiled for the browser",
-    "main": "dist/index.js",
+    "main": "./index.js",
     "types": "dist/index.d.ts",
     "repository": {
         "type": "git",
@@ -11,7 +11,7 @@
     "scripts": {
         "test": "rm -r test/dist; tsc -v && tsc -p test/ && ava -v",
         "compile": "tsc -p ./ && npm run rollup",
-        "rollup": "npx rollup ./dist/index.js --file bundle.js --format umd --name fluentBehaviorTree",
+        "rollup": "npx rollup ./dist/index.js --file bundle.js --format es --name fluentBehaviorTree",
         "lint": "tslint -c tslint.json 'src/**/*.ts' --exclude 'src/**/*.d.ts' --fix",
         "watch": "nodemon -e ts -w src --exec 'npm run compile'"
     },
@@ -36,5 +36,6 @@
         "source": [
             "dist/**/*.js"
         ]
-    }
+    },
+    "type": "module"
 }
